diesel_compile_tests/tests/fail/combinations_require_same_sql_types.stderr
error[E0271]: type mismatch resolving `<comments::table as AsQuery>::SqlType == (diesel::sql_types::Integer, diesel::sql_types::Text)`
  --> tests/fail/combinations_require_same_sql_types.rs:30:32
   |
30 |     let _ = users::table.union(comments::table);
   |                          ----- ^^^^^^^^^^^^^^^ expected struct `diesel::sql_types::Text`, found struct `diesel::sql_types::Integer`
   |                          |
   |                          required by a bound introduced by this call
   |
   = note: expected tuple `(diesel::sql_types::Integer, diesel::sql_types::Text)`
              found tuple `(diesel::sql_types::Integer, diesel::sql_types::Integer)`
note: required by a bound in `union`
  --> $DIESEL/src/query_dsl/combine_dsl.rs
   |
   |         Rhs: AsQuery<SqlType = <Self::Query as Query>::SqlType>;
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `union`

error[E0271]: type mismatch resolving `<comments::table as AsQuery>::SqlType == (diesel::sql_types::Integer, diesel::sql_types::Text)`
  --> tests/fail/combinations_require_same_sql_types.rs:35:25
   |
35 |     let _ = union.union(comments::table);
   |                   ----- ^^^^^^^^^^^^^^^ expected struct `diesel::sql_types::Text`, found struct `diesel::sql_types::Integer`
   |                   |
   |                   required by a bound introduced by this call
   |
   = note: expected tuple `(diesel::sql_types::Integer, diesel::sql_types::Text)`
              found tuple `(diesel::sql_types::Integer, diesel::sql_types::Integer)`
note: required by a bound in `union`
  --> $DIESEL/src/query_dsl/combine_dsl.rs
   |
   |         Rhs: AsQuery<SqlType = <Self::Query as Query>::SqlType>;
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `union`
